pinch of js for table scrolling on long tables, admin button and footer fixed on mobile

--- a/assets/css/list.scss
+++ b/assets/css/list.scss
@@ -60,8 +60,16 @@ h1{
 	color: darken(white,0%);
 	text-shadow:0 1px 0 darken($primaryDrk,10%);
 	letter-spacing: 2px;
+	@media screen and (max-width:650px){
+		margin-top: 20px;
+	}
 }
-
+.tableWrap{
+	margin:0 auto;
+	overflow:auto;
+	max-height:500px;
+	overflow-x:hidden;
+}
 table.theList{
 	border-collapse:collapse;
 	margin: 0 auto;
@@ -149,6 +157,11 @@ footer{
 		margin: 0 3px;
 		transition:all 200ms;
 		border-radius:2px;
+		@media screen and (max-width:650px){
+			display: block;
+			width: 90%;
+			margin:2px auto;
+		}
 		&:hover{
 			background: darken($alert,30%);
 			box-shadow:inset 0 0 10px darken($alert,40%);
@@ -161,11 +174,10 @@ footer{
 	@media all and (max-width:1175px){
 		width: 50%;
 	}
-		@media all and (max-width:835px){
-		width: 100%;
-		border-radius: 0;
+	@media all and (max-width:835px){
+	width: 100%;
+	border-radius: 0;
 	}
-
 }
 .adminButton{
 	position: fixed;
@@ -181,6 +193,9 @@ footer{
 	border-radius:0 0 2px 2px;
 	opacity: .5;
 	transition:all 200ms;
+	@media screen and (max-width:650px){
+		right: 2px;
+	}
 	&:hover{
 		opacity:1;
 	}
